feat: added documentation for deleteOpenings; fixed a typo
