# handler/deleteOpening.go
@@ -8,6 +8,18 @@ import (
 	"github.com/kSantiagoP/gopi/schemas"
 )
 
+// @BasePath /api/v1
+
+// @Summary Delete opening
+// @Description Delete a job opening
+// @Tags Openings
+// @Accept json
+// @Produce json
+// @Param id query string true "Opening id"
+// @Success 200 {object} DeleteOpeningResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /opening [delete]
 func DeleteOpeningHandler(c *gin.Context) {
 	id := c.Query("id")
 	if id == "" {
